--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite --host 0.0.0.0 preview"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^5.3.0",
