--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,18 @@ env:
 phases:
   pre_build:
     commands:
+      - echo "VITE_FIREBASE_API_KEY $VITE_FIREBASE_API_KEY"
+      - echo "VITE_FIREBASE_APP_ID $VITE_FIREBASE_APP_ID"
+      - echo "VITE_FIREBASE_AUTH_DOMAIN $VITE_FIREBASE_AUTH_DOMAIN"
+      - echo "VITE_FIREBASE_MEASUREMENT_ID $VITE_FIREBASE_MEASUREMENT_ID"
+      - echo "VITE_FIREBASE_MESSAGING_SENDER_ID $VITE_FIREBASE_MESSAGING_SENDER_ID"
+      - echo "VITE_FIREBASE_PROJECT_ID $VITE_FIREBASE_PROJECT_ID"
+      - echo "VITE_FIREBASE_STORAGE_BUCKET $VITE_FIREBASE_STORAGE_BUCKET"
+      - echo "VITE_FIRESTORE_REQ_BODY_NAME $VITE_FIRESTORE_REQ_BODY_NAME"
+      - echo "VITE_FIRESTORE_USER_PROFILES_BASE_URL $VITE_FIRESTORE_USER_PROFILES_BASE_URL"
+      - echo "VITE_GOOGLE_CLIENT_ID $VITE_GOOGLE_CLIENT_ID"
+      - echo "VITE_RECAPTCHA_V3_SITE_KEY $VITE_RECAPTCHA_V3_SITE_KEY"
+      - echo "VITE_BACKEND_ENDPOINT $VITE_BACKEND_ENDPOINT"
       - echo Build started on `date`
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
