--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,18 @@ env:
 phases:
   pre_build:
     commands:
+      - |
+        if [ -z "$VITE_FIREBASE_API_KEY" ]; then
+          echo "VITE_FIREBASE_API_KEY is not set"
+        else
+          echo "VITE_FIREBASE_API_KEY is set"
+        fi
+      - |
+        if [ -z "$VITE_FIREBASE_APP_ID" ]; then
+          echo "VITE_FIREBASE_APP_ID is not set"
+        else
+          echo "VITE_FIREBASE_APP_ID is set"
+        fi
       - echo "VITE_FIREBASE_API_KEY $VITE_FIREBASE_API_KEY"
       - echo "VITE_FIREBASE_APP_ID $VITE_FIREBASE_APP_ID"
       - echo "VITE_FIREBASE_AUTH_DOMAIN $VITE_FIREBASE_AUTH_DOMAIN"
